<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    app:layout_constraintHorizontal_weight="1"
    android:padding="24dp">
    <TextView
        android:id="@+id/urlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urlLabel"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/urlInput"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/urlHint"
        android:text="@string/defaultAddress"
        app:layout_constraintStart_toEndOf="@+id/urlLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/urlLabel"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.9"
        android:inputType="textUri|textMultiLine"/>

    <Button
        android:id="@+id/infoButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/urlInput"
        android:text="@string/infoButtonLabel" />
    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sizeLabel"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"/>
    <TextView
        android:id="@+id/sizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultSize"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sizeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"/>

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/typeLabel"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeLabel"/>
    <TextView
        android:id="@+id/typeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultSize"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sizeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeValue"/>

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/typeValue"
        android:text="@string/downloadButtonLabel" />

    <TextView
        android:id="@+id/downloadedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/downloadedLabel"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton"/>
    <TextView
        android:id="@+id/downloadedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultSize"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sizeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/downloadedValue"
        android:layout_height="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>